eksisterende rader har tomme verdier i denne kolonnen så må ha nullsjekk på attribute converter begge veier.